force-app/main/default/objects/b3_Pending_Notification__c/b3_Pending_Notification__c.object-meta.xml
<CustomObject>
    <label>Pending Notification</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Pending Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>