force-app/main/default/objects/b3_Pending_Notification__c/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <label>Notification Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>