force-app/main/default/objects/b3_Pending_Notification__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Pending Notifications</relationshipLabel>
    <relationshipName>Pending_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>