force-app/main/default/objects/b3_Pending_Notification__c/fields/Unsent_Notifications_on_Creation__c.field-meta.xml
<CustomField>
    <fullName>Unsent_Notifications_on_Creation__c</fullName>
    <label>Unsent Notifications on Creation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>